# boringssl_ffi

./: .gitignore  README.md  analysis_options.yaml  dart_test.yaml  dartdoc_options.yaml  ffigen.yaml  generate_ffigen.sh  pubspec.yaml  run_local_docs.sh  test.sh
android/: .gitignore  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  dart_test.yaml  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: example_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/benchmarks/: run_benchmark.dart
example/lib/benchmarks/sha256/: sha256.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/: Podfile
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: boringssl_ffi.podspec
ios/Frameworks/boringssl_ffi.xcframework/: Info.plist
lib/: boringssl_bindings.dart  boringssl_ffi.dart
lib/crypto/: crypto.dart
lib/crypto/cipher/: aes.dart  aes_cbc.dart  aes_cfb.dart  aes_ctr.dart  aes_ecb.dart  aes_ofb.dart  cipher.dart
lib/crypto/cipher/aead/: aead.dart  aead_main.dart  aead_session.dart
lib/crypto/cipher/aes/: aes.dart  aes_cbc.dart  aes_cfb.dart  aes_ctr.dart  aes_ecb.dart  aes_main.dart  aes_ofb.dart
lib/crypto/cipher/chacha/: chacha.dart  chacha20.dart  chacha20_session.dart
lib/crypto/hash/: hash.dart  sha1.dart  sha224.dart  sha512.dart  sha512_256.dart
lib/crypto/hash/hmac/: hmac.dart  hmac_main.dart
lib/crypto/hash/keccak/: keccak.dart  keccak_main.dart  keccak_sha3_256.dart
lib/crypto/hash/sha/: sha.dart  sha1.dart  sha224.dart  sha256.dart  sha384.dart  sha512.dart  sha512_256.dart
lib/crypto/kdf/: kdf.dart
lib/crypto/kdf/hkdf/: hkdf.dart  hkdf_main.dart
lib/crypto/kdf/pbkdf2/: pbkdf2.dart  pbkdf2_hmac.dart
lib/crypto/kem/: kem.dart  kyber.dart  kyber_session.dart
lib/src/bindings/: bindings.dart
lib/src/ffi_lib/: allocators.dart  arena_wrapper.dart  ffi_bindings.dart  ffi_lib.dart  safe_arena.dart
lib/src/helpers/: pkcs7.dart
lib/src/helpers/collections/: first_where_nullable.dart
lib/src/helpers/conversion/: list_to_bytearray.dart
lib/src/helpers/evp/: _aead_evp.dart  aead_evp.dart  md_evp.dart
lib/src/helpers/padding/: pkcs7.dart
lib/src/logging/: logging.dart
linux/: CMakeLists.txt
macos/: boringssl_ffi.podspec
src/: CMakeLists.txt  process_header.py
test/: helpers.dart  integration_test_entry.dart  parsing.dart
test/crypto/cipher/: test_list.dart
test/crypto/cipher/aead_aes_gcm/: aead_aes_gcm.dart  open.dart  seal.dart
test/crypto/cipher/aes_cbc/: aes_cbc_test_vectors.dart  decrypt.dart  decrypt_test.dart  encrypt.dart  encrypt_test.dart
test/crypto/cipher/aes_cfb/: aes_cfb.dart  aes_cfb_test_vectors.dart  decrypt.dart  decrypt_test.dart  encrypt.dart  encrypt_test.dart
test/crypto/cipher/aes_ctr/: aes_ctr_test.dart  aes_ctr_test_vectors.dart  decrypt.dart  decrypt_test.dart  encrypt.dart  encrypt_test.dart
test/crypto/cipher/aes_ecb/: aes_ecb_test.dart  aes_ecb_test_vectors.dart  decrypt.dart  decrypt_test.dart  encrypt.dart  encrypt_test.dart
test/crypto/cipher/aes_ofb/: aes_ofb_test_vectors.dart  decrypt.dart  decrypt_test.dart  encrypt.dart  encrypt_test.dart
test/crypto/cipher/chacha/: chacha_test_vectors.dart  decrypt.dart  decrypt_test.dart  encrypt_test.dart
test/crypto/cipher/test_vector/: aead_aes_ccm_bluetooth8_tv.dart  aead_aes_ccm_bluetooth_tv.dart  aead_aes_ccm_matter_tv.dart  aead_aes_crt_hmac_sha256_tv.dart  aead_aes_eax_tv.dart  aead_aes_gcm_randnonce_tv.dart  aead_aes_gcm_siv_tv.dart  aead_aes_gcm_tv.dart  aead_chacha20_poly1305_tv.dart  aead_xchacha20_poly1305_tv.dart  aes_cbc_tv.dart  aes_cfb_tv.dart  aes_crt_tv.dart  aes_ecb_tv.dart  aes_ofb_tv.dart  chacha20_tv.dart
test/crypto/cipher/tests/: aead_aes_ccm_bluetooth8_open.dart  aead_aes_ccm_bluetooth8_seal.dart  aead_aes_ccm_bluetooth_open.dart  aead_aes_ccm_bluetooth_seal.dart  aead_aes_ccm_matter_open.dart  aead_aes_ccm_matter_seal.dart  aead_aes_crt_hmac_sha256_open.dart  aead_aes_crt_hmac_sha256_seal.dart  aead_aes_eax_open.dart  aead_aes_eax_seal.dart  aead_aes_gcm_open.dart  aead_aes_gcm_randnonce_open.dart  aead_aes_gcm_randnonce_seal.dart  aead_aes_gcm_seal.dart  aead_aes_gcm_siv_open.dart  aead_aes_gcm_siv_seal.dart  aead_chacha20_poly1305_open.dart  aead_chacha20_poly1305_seal.dart  aead_xchacha20_poly1305_open.dart  aead_xchacha20_poly1305_seal.dart  aes_cbc_decrypt.dart  aes_cbc_encrypt.dart  aes_cfb_decrypt.dart  aes_cfb_encrypt.dart  aes_crt_decrypt.dart  aes_crt_encrypt.dart  aes_ecb_decrypt.dart  aes_ecb_encrypt.dart  aes_ofb_decrypt.dart  aes_ofb_encrypt.dart  chacha20_decrypt.dart  chacha20_encrypt.dart
test/crypto/hash/: test_list.dart
test/crypto/hash/hmac_sha1/: hash.dart  hash_test.dart  hash_test_vectors.dart
test/crypto/hash/hmac_sha224/: hash.dart  hash_test.dart  hash_test_vectors.dart
test/crypto/hash/hmac_sha256/: hash.dart  hash_test.dart  hash_test_vectors.dart
test/crypto/hash/hmac_sha384/: hash.dart  hash_test.dart  hash_test_vectors.dart
test/crypto/hash/hmac_sha512/: hash.dart  hash_test.dart  hash_test_vectors.dart  hmac_sha512_test.dart
test/crypto/hash/hmac_sha512_256/: hash.dart  hash_test.dart  hash_test_vectors.dart
test/crypto/hash/pbkdf2_hmac_sha224/: derive_test_vectors.dart
test/crypto/hash/pbkdf2_hmac_sha256/: derive_test_vectors.dart
test/crypto/hash/pbkdf2_hmac_sha384/: derive_test.dart  derive_test_vectors.dart  pbkdf2_hmac_sha384_test.dart
test/crypto/hash/pbkdf2_hmac_sha512/: derive_test_vectors.dart
test/crypto/hash/pbkdf2_hmac_sha512_256/: derive_test.dart  (+1 more)
test/crypto/kdf/: test_list.dart
test/crypto/kem/: run_test.dart  test_list.dart
test/make_test/: make_test_func.dart
windows/: CMakeLists.txt
(+96 files in other folders)
